infra/k8s/auth-depl.yaml
# for deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: dineshranjanbiswal/auth
---

# for clusterip
apiVersion: v1
kind: Service
metadata:
  name: auth-clusterip-srv
spec:
  selector:
    app: auth
  ports:
  - name: auth
    protocol: TCP
    port: 7000
    targetPort: 7000
